--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"server": "nodemon index.js"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/angel-torres/backend-011620#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "knex": "^0.20.8",
     "nodemon": "^2.0.2"
   }
 }
